# ePIC2D_mcc

./: CMakeLists.txt  Doxyfile  README.md  input.ini  makefile
include/: collision.h  domain.h  electrode.h  emitter.h  extrafun.h  field.h  grid.h  iniparser.h  init.h  math.h  matplotlibcpp.h  output.h  species.h
inputfiles/: input.ini  input_iongun.ini  input_logo.ini
linearalgebra/: function.h  linalg.h  slap.h  solvers.h
python_scripts/: 1.py  contour.py  contour_2s.py  decay.py  density_plot.py  dispersion.py  fft.py  ffttest.py  gd1.py  growdecay.py  ke.py  ke_plot.py  ke_plot_2s.py  ke_test.py  landau1.py  momentum_plot.py  momentum_plot_2s.py  phase2.py  phase_pot_plot.py  phaseplot_species.py  potential_plot.py  potential_plot_surface.py  read_metadata.py  sheath.py  test.py  vel_dist_2s.py  vel_dist_new.py
src/: collision.cpp  domain.cpp  electrode.cpp  emitter.cpp  field.cpp  grid.cpp  iniparser.cpp  init.cpp  main.cpp  output.cpp  species.cpp
tests/: test_solvers.cpp
